add ArrayList<T> and LinkedList<T>